added RestrictedNative to MemoryAddress.asSegmentRestricted overload fixed --enable-native-access option in few more tests.