@@ -25,9 +25,10 @@
  * @test
  * @modules java.base/sun.nio.ch
  *          jdk.incubator.foreign/jdk.internal.foreign
- * @run testng/othervm -Dforeign.restricted=permit TestByteBuffer
+ * @run testng/othervm --enable-native-access=ALL-UNNAMED/jdk.foreign.test jdk.foreign.test.TestByteBuffer
  */
 
+package jdk.foreign.test;
 
 import jdk.incubator.foreign.MappedMemorySegments;
 import jdk.incubator.foreign.MemoryAccess;
